--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-weekly-calendar": "^0.2.0",
     "react-navigation": "^4.4.4",
     "react-redux": "^8.1.1"
   },
